[feat] 챌린지 행동 시 누적은 1증가, 연속은 마지막 달성 일자 계산 후 적용
Former-commit-id: 0b989e8956f870f4cdcef686e2fde243464937fd